# microservice-py-docker

./: .env  .env.template  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  Makefile  README.md  docker-compose.yml  gen_ref_pages.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  ruff.toml
.devcontainer/: devcontainer.json
.github/workflows/: build-docs.yaml  test.yaml
API_Documentation/SUMMARY/: index.html
API_Documentation/api/: index.html
API_Documentation/api/core/: index.html
API_Documentation/api/core/celery/: index.html
API_Documentation/api/core/config/: index.html
API_Documentation/api/core/database/: index.html
API_Documentation/api/core/files/: index.html
API_Documentation/api/core/models/: index.html
API_Documentation/api/core/oauth2/: index.html
API_Documentation/api/main/: index.html
API_Documentation/api/routers/: index.html
API_Documentation/api/routers/auth/: index.html
API_Documentation/api/routers/file/: index.html
API_Documentation/api/routers/user/: index.html
API_Documentation/backend/main/: index.html
api/: Dockerfile  main.py  requirements.txt
api/core/: celery.py  config.py  database.py  embeddings.py  files.py  models.py  oauth2.py  queue.py  utils.py
api/routers/: auth.py  file.py  search.py  user.py
backend/: Dockerfile  main.py  requirements.txt
backend/core/: __init__.py  callbacks.py  queue.py  utils.py
docs/: index.md
fileserver/: Dockerfile  main.py  requirements.txt
postgres/: Dockerfile
scripts/: check_requirements.sh  coverage_badge.sh
search/: search_index.json
tests/: conftest.py  test_api_auth.py  test_api_file.py  test_api_search.py  test_api_users.py  test_backend_consumer.py  test_fileserver_api.py  test_root.py
