[tool.poetry]
name = "microservice-py-docker"
version = "0.10.0"
description = "Microservice with python and docker"
authors = ["yemaney <yemane_@outlook.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "microservice_py_docker"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.88.0"}
sqlmodel = "^0.0.8"
psycopg2 = "^2.9.5"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pika = "^1.3.1"
minio = "^7.2.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pre-commit = "^2.21.0"
trio = "^0.22.0"


[tool.poetry.group.docs.dependencies]
coverage-badge = "^1.1.0"
mkdocs-material = "^8.5.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
