[tool.poetry]
name = "microservice-py-docker"
version = "0.11.0"
description = "Microservice with python and docker"
authors = ["yemaney <yemane_@outlook.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "microservice_py_docker"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.110.2"}
sqlmodel = "^0.0.16"
psycopg2-binary = "^2.9.9"
passlib = "^1.7.4"
python-jose = "^3.3.0"
minio = "^7.2.6"
aio-pika = "^9.4.1"
celery = "^5.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pre-commit = "^2.21.0"
trio = "^0.22.0"


[tool.poetry.group.docs.dependencies]
coverage-badge = "^1.1.0"
mkdocs-material = "^8.5.11"
mkdocstrings = {extras = ["python"], version = "^0.25.0"}
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.1"
mkdocs-section-index = "^0.3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
