[project]
name = "microservice-py-docker"
version = "0.11.0"
description = "Microservice with python and docker"
authors = [{name = "yemaney", email = "yemane_@outlook.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "aio-pika==9.4.1",
    "celery==5.4.0",
    "fastapi[all]==0.110.2",
    "httpx==0.26.0",
    "minio==7.2.6",
    "passlib==1.7.4",
    "pgvector==0.3.6",
    "psycopg2-binary==2.9.9",
    "python-jose==3.3.0",
    "sqlmodel==0.0.16",
]

[dependency-groups]
dev = [
    "pre-commit==2.21.0",
    "pytest==7.2.0",
    "pytest-cov==4.0.0",
    "ruff>=0.14.10",
    "trio==0.22.0",
]
docs = [
    "coverage-badge==1.1.0",
    "mkdocs-gen-files==0.5.0",
    "mkdocs-literate-nav==0.6.1",
    "mkdocs-material==8.5.11",
    "mkdocs-section-index==0.3.9",
    "mkdocstrings[python]==0.25.0",
]
